--- a/providers/templates/providers_edit_info.html
+++ b/providers/templates/providers_edit_info.html
@@ -8,7 +8,9 @@
 <form action="{{url_for('providers_bp.save_info')}}" id="providerEditForm" method="POST" autocomplete="off"
     autocomplete="chrome-off">
     {{ form.hidden_tag() }}
-
+    <p>
+        {{form.active.label}}: {{form.active}}
+    </p>
     <p>
         {{form.name.label}}: {{form.name}} <span class="error" id="nameError"></span>
     </p>
@@ -39,37 +41,87 @@
         {{form.sales_pitch.label}}: {{form.sales_pitch}}
     </p>
     <p>
-        {%if pc%}
-        {% set a=namespace(quit = False) %}
-        {%else %}
-        {%set a=namespace(quit=True)%}
-        {%endif%}
 
         {% for c in form_c.cuisines %}
-
-        {% for id in pc if not a.quit %}
-        {%if id.cuisine_id == c.data %}
-        {{c(checked=True)}}
-        {% set a.quit = True%}
-        {%endif%}
-
-        {%endfor%}
-
-        {%if (not a.quit and pc) or (a.quit and not pc)%}
         {{c}}
-        {%endif %}
-
-        {%if pc%}
-        {%set a.quit = False%}
-        {%endif%}
-
         {{c.label}}
         {% endfor %}
 
     </p>
-    <p>
-        {{form.active.label}}: {{form.active}}
-    </p>
+    <fieldset>
+        <legend>
+            Delivery settings settings
+        </legend>
+        <p>
+            {{form.max_meals_per_day.label}} {{form.max_meals_per_day}}
+        </p>
+        <p>
+            {{form.min_meals.label}} {{form.min_meals}}
+        </p>
+        <p>
+            {{form.serve_num_org_per_day.label}} {{form.serve_num_org_per_day}}
+        </p>
+    </fieldset>
+
+
+
+    <fieldset>
+        <legend>Set recurring availability</legend>
+        {% for d in form_days.days %}
+        {{d}}
+        {{d.label}}
+        {% endfor %}
+        <p>
+            Start date: <input type="date" id="startDate">
+            End date:<input type="date" id="endDate">
+            <button id="addRecurringDate">Add Recurring Day</button>
+            <span class="error" id="recurringDateError"></span>
+        </p>
+        <p>
+        <h5>Selected recurring days</h5>
+        <table>
+            <tbody id="recurringDayTable" class="pointer">
+
+                {%for day,id,start,end in pd%}
+                <tr>
+                    <td data-id="{{id}}:{{start.strftime('%Y-%m-%d')}}:{{end.strftime('%Y-%m-%d')}}">
+                        Every {{day}} {%if start%} {{start}} - {{end}} {%
+                        endif%}
+                    </td>
+                    <td
+                        id="{{day}}{{start.strftime('%Y-%m-%d').replace('-','')}}{{end.strftime('%Y-%m-%d').replace('-','')}}">
+                        X
+                    </td>
+                </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+        </p>
+    </fieldset>
+    <fieldset>
+        <legend>Set specific availability</legend>
+        Dates available
+        <input type="date" name="date" id="date">
+        <button id="addDate">Add Date</button>
+        <span class="error" id="dateError"></span>
+
+        <h5>Selected dates</h5>
+        <table>
+            <tbody id="datesTable" class="pointer">
+
+                {%for d in prov_dates%}
+                <tr>
+                    <td>
+                        {{d.date}}
+                    </td>
+                    <td id="d{{d.date.strftime('%Y-%m-%d').replace('-','')}}">
+                        X
+                    </td>
+                </tr>
+                {%endfor%}
+            </tbody>
+        </table>
+    </fieldset>
     <ul>
 
         {% for field,error in form.errors.items() %}
@@ -85,4 +137,5 @@
 
 {% endblock %}
 {% block scripts%}
-<script src="{{url_for('providers_bp.static',filename='edit_info_js.js')}}"></script>{% endblock%}
+<script src="{{url_for('providers_bp.static',filename='edit_info_js.js')}}"></script>
+<script src="{{url_for('providers_bp.static',filename='edit_avail.js')}}"></script>{% endblock%}
