fixed a lot of bugs and made code DRYer, added delete functions

--- a/auth/templates/set_password.html
+++ b/auth/templates/set_password.html
@@ -3,6 +3,7 @@
 {% block title %}Set password{% endblock %}
 {% block content %}
 <h1>Set password</h1>
+<section><span class="error"></span></section>
 <form id="setPassword" method="POST">
     <input type="hidden" name="email" value="{{email}}" />
     {{ form.hidden_tag() }}
@@ -16,10 +17,10 @@
         {% endfor%}
     </p>
     {% endfor %}
-    <button>Set Password</button>
+    <button id="submit">Set Password</button>
 </form>
 
 <p>Automatically log them in</p>
 <p>must be 8 characters, no other constraints</p>
-
+<script src="{{url_for('auth_bp.static',filename='auth_js.js')}}"></script>
 {% endblock %}
