--- a/providers/templates/providers_details.html
+++ b/providers/templates/providers_details.html
@@ -16,10 +16,10 @@
 
 </p>
 <p>
-    City: {{p.city_id}}
+    City: {{city}}
 </p>
 <p>
-    Province: {{p.province_id}}
+    Province: {{prov}}
 </p>
 <p>
     Contact Name: {{p.contact_name}}
