--- a/schools/templates/schools_home.html
+++ b/schools/templates/schools_home.html
@@ -37,7 +37,7 @@
         </li>
     </ul>
 
-    <button><a href="/schools/edit_info">Edit</a></button>
+    <button><a href="{{url_for('schools_bp.edit_info')}}">Edit</a></button>
 
 </section>
 {% endblock %}
