--- a/providers/templates/providers_edit_info.html
+++ b/providers/templates/providers_edit_info.html
@@ -150,5 +150,5 @@
 
 {% endblock %}
 {% block scripts%}
-<script src="{{url_for('providers_bp.static',filename='edit_info_js.js')}}"></script>
+<script src="{{url_for('static',filename='autocomplete.js')}}"></script>
 <script src="{{url_for('static',filename='app.js')}}"></script>{% endblock%}
