--- a/schools/templates/schools_edit_info.html
+++ b/schools/templates/schools_edit_info.html
@@ -132,4 +132,4 @@
 {% endblock %}
 {% block scripts%}
 <script src="{{url_for('static',filename='app.js')}}"></script>
-<script src="{{url_for('schools_bp.static',filename='edit_info.js')}}"></script>{% endblock%}
+<script src="{{url_for('static',filename='autocomplete.js')}}"></script>{% endblock%}
